{
    "name": "InputProvider",
    "maps": [
        {
            "name": "Play",
            "id": "9310c7e8-965f-479f-a594-e1ad18b94d62",
            "actions": [
                {
                    "name": "Horizontal",
                    "type": "Value",
                    "id": "d13a9218-1427-4b18-b4bd-9389c084e709",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "Vertical",
                    "type": "Value",
                    "id": "1667b579-7671-4e8d-8811-d29c5bc79028",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "Run",
                    "type": "Button",
                    "id": "b00393e9-add0-4118-904d-19810be6ea2f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "UseTool",
                    "type": "Button",
                    "id": "563169fe-ad0d-4d09-9e94-1d6cdcd77f42",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "403d9c94-ccfa-4ab8-8225-190bf8b20829",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "AD",
                    "id": "9f30b959-46df-49b9-9559-e1d6eca1aa88",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Horizontal",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "c2b50c6c-ffda-4516-b3c8-7232c5e4be05",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Horizontal",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "2533992d-8b77-4679-b3b2-f0e737facc37",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Horizontal",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "WS",
                    "id": "24599fa3-bc97-43ca-9e2b-45118b5fd84f",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Vertical",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "74792238-c67c-47dc-b2c2-0910e858ef73",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Vertical",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "31906809-c499-4189-b056-d1a4592e9f4f",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Vertical",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "b581f418-e583-4974-87ce-3d298ba6afea",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Run",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c853c26a-010a-48f8-ba48-211d5d6df76f",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UseTool",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4fdfebdb-819a-45c8-ab3b-8cc7f507471c",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}